--- a/jspweb6_mvc1/.project
+++ b/jspweb6_mvc1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jspweb6</name>
+	<name>jspweb6_mvc1</name>
 	<comment></comment>
 	<projects>
 	</projects>
