--- a/jspweb6_mvc3/src/main/webapp/WEB-INF/web.xml
+++ b/jspweb6_mvc3/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
   <!-- servlet mapping -->
   <servlet>
   	<servlet-name>dispatcher</servlet-name>
+  	<!-- 아래 경로에 있는 파일을 위의 dispatcher라는 이름으로 선언하는 과정 -->
   	<servlet-class>customer.contoller.MyDispatcher</servlet-class>
   </servlet>
   <servlet-mapping>
