--- a/jspweb15_etcSeoul_semiP/src/main/webapp/WEB-INF/web.xml
+++ b/jspweb15_etcSeoul_semiP/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,17 @@
   	<servlet-name>dispatcher</servlet-name>
   	<url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
+   <filter> <!-- 이 필터를 거친 후 밑에 필터가 있다면 그 필터를 거친다 (필터체인 이렇게 일어남) -->
+  <filter-name>EncodingFilter</filter-name>
+  <filter-class>jh.customer.filter.JHFilter</filter-class>
+  <init-param>
+    <param-name>encoding</param-name>
+    <param-value>UTF-8</param-value> <!--나중에 이 값만 바꾸면 됨  -->
+  </init-param>
+   </filter>
+   <filter-mapping>
+     <filter-name>EncodingFilter</filter-name>
+     <url-pattern>/*</url-pattern> <!-- 모든 -->
+   </filter-mapping>
 </web-app>
